--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ django = "^4.2.5"
 djangorestframework = "^3.14.0"
 django-environ = "^0.11.2"
 django-cors-headers = "^4.2.0"
+channels-redis = "^4.1.0"
+channels = {extras = ["daphne"], version = "^4.0.0"}
+drf-yasg = "^1.21.7"
 
 
 [tool.poetry.group.dev.dependencies]
