--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-cors-headers = "^4.2.0"
 channels-redis = "^4.1.0"
 channels = {extras = ["daphne"], version = "^4.0.0"}
 drf-yasg = "^1.21.7"
+pillow = "^10.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
