--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ async-timeout==4.0.3 ; python_version >= "3.11" and python_full_version <= "3.11
 attrs==23.1.0 ; python_version >= "3.11" and python_version < "4.0"
 autobahn==23.6.2 ; python_version >= "3.11" and python_version < "4.0"
 automat==22.10.0 ; python_version >= "3.11" and python_version < "4.0"
+boto3==1.28.55 ; python_version >= "3.11" and python_version < "4.0"
+botocore==1.31.55 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.15.1 ; python_version >= "3.11" and python_version < "4.0"
 channels-redis==4.1.0 ; python_version >= "3.11" and python_version < "4.0"
 channels==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -19,6 +21,7 @@ hyperlink==21.0.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
 incremental==22.10.0 ; python_version >= "3.11" and python_version < "4.0"
 inflection==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
+jmespath==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
 msgpack==1.0.5 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.1 ; python_version >= "3.11" and python_version < "4.0"
 pillow==10.0.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -26,9 +29,11 @@ pyasn1-modules==0.3.0 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.5.0 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.11" and python_version < "4.0"
 pyopenssl==23.2.0 ; python_version >= "3.11" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2023.3.post1 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
 redis==5.0.0 ; python_version >= "3.11" and python_version < "4.0"
+s3transfer==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
 service-identity==23.1.0 ; python_version >= "3.11" and python_version < "4.0"
 setuptools==68.2.2 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -39,4 +44,5 @@ txaio==23.1.1 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.8.0 ; python_version >= "3.11" and python_version < "4.0"
 tzdata==2023.3 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
 uritemplate==4.1.1 ; python_version >= "3.11" and python_version < "4.0"
+urllib3==1.26.16 ; python_version >= "3.11" and python_version < "4.0"
 zope-interface==6.0 ; python_version >= "3.11" and python_version < "4.0"
