--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ channels = {extras = ["daphne"], version = "^4.0.0"}
 drf-yasg = "^1.21.7"
 pillow = "^10.0.1"
 boto3 = "^1.28.55"
+psycopg2-binary = "^2.9.6"
 
 
 [tool.poetry.group.dev.dependencies]
