--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ jmespath==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
 msgpack==1.0.5 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.1 ; python_version >= "3.11" and python_version < "4.0"
 pillow==10.0.1 ; python_version >= "3.11" and python_version < "4.0"
+psycopg2-binary==2.9.7 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1-modules==0.3.0 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.5.0 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.11" and python_version < "4.0"
