--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ drf-yasg = "^1.21.7"
 pillow = "^10.0.1"
 boto3 = "^1.28.55"
 psycopg2-binary = "^2.9.6"
+django-storages = "^1.14"
 
 
 [tool.poetry.group.dev.dependencies]
