--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cryptography==41.0.4 ; python_version >= "3.11" and python_version < "4.0"
 daphne==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
 django-cors-headers==4.2.0 ; python_version >= "3.11" and python_version < "4.0"
 django-environ==0.11.2 ; python_version >= "3.11" and python_version < "4"
+django-storages==1.14 ; python_version >= "3.11" and python_version < "4.0"
 django==4.2.5 ; python_version >= "3.11" and python_version < "4.0"
 djangorestframework==3.14.0 ; python_version >= "3.11" and python_version < "4.0"
 drf-yasg==1.21.7 ; python_version >= "3.11" and python_version < "4.0"
