--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ autobahn==23.6.2 ; python_version >= "3.11" and python_version < "4.0"
 automat==22.10.0 ; python_version >= "3.11" and python_version < "4.0"
 boto3==1.28.55 ; python_version >= "3.11" and python_version < "4.0"
 botocore==1.31.55 ; python_version >= "3.11" and python_version < "4.0"
+certifi==2023.7.22 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.15.1 ; python_version >= "3.11" and python_version < "4.0"
 channels-redis==4.1.0 ; python_version >= "3.11" and python_version < "4.0"
 channels==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
 channels[daphne]==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
+charset-normalizer==3.2.0 ; python_version >= "3.11" and python_version < "4.0"
 constantly==15.1.0 ; python_version >= "3.11" and python_version < "4.0"
 cryptography==41.0.4 ; python_version >= "3.11" and python_version < "4.0"
 daphne==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -35,6 +37,7 @@ python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2023.3.post1 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
 redis==5.0.0 ; python_version >= "3.11" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
 s3transfer==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
 service-identity==23.1.0 ; python_version >= "3.11" and python_version < "4.0"
 setuptools==68.2.2 ; python_version >= "3.11" and python_version < "4.0"
