--- a/.ebextensions/01-django.config
+++ b/.ebextensions/01-django.config
@@ -5,6 +5,12 @@ option_settings:
     DJANGO_SETTINGS_MODULE: config.settings
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
+  aws:elbv2:listener:80:
+    ListenerEnabled: 'true'
+    Protocol: HTTP
+  aws:elbv2:listener:5000:
+    ListenerEnabled: 'true'
+    Protocol: HTTP
 container_commands:
   01_makemigrations:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations --noinput"
@@ -18,3 +24,5 @@ container_commands:
   04_collectstatic:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic --noinput"
     leader_only: true
+  05_wsgipass:
+    command: 'echo "WSGIPassAuthorization On" >> ../wsgi.conf'
