chore: redis version

--- a/.ebextensions/02-redis.config
+++ b/.ebextensions/02-redis.config
@@ -1,20 +1,38 @@
-packages:
+packages: 
   yum:
-    - gcc-c++
-    - make
-
+    gcc-c++: [] 
+    make: []
 sources:
-  /home/ec2-user/redis: http://download.redis.io/releases/redis-5.0.5.tar.gz
-
+  /home/ec2-user: http://download.redis.io/releases/redis-5.0.8.tar.gz
 commands:
-  01_extract_redis:
-    command: tar -xzf /home/ec2-user/redis/redis-5.0.5.tar.gz -C /home/ec2-user/redis
-  02_redis_build:
-    command: make -C /home/ec2-user/redis/redis-5.0.5
-  03_redis_config:
-    command: |
-      sed -i 's/daemonize no/daemonize yes/' /home/ec2-user/redis/redis-5.0.5/redis.conf
-      sed -i 's/# maxmemory <bytes>/maxmemory 500MB/' /home/ec2-user/redis/redis-5.0.5/redis.conf
-      sed -i 's/# maxmemory-policy volatile-lru/maxmemory-policy allkeys-lru/' /home/ec2-user/redis/redis-5.0.5/redis.conf
-  04_start_redis:
-    command: /home/ec2-user/redis/redis-5.0.5/src/redis-server /home/ec2-user/redis/redis-5.0.5/redis.conf
+  redis_build:
+    command: make
+    cwd: /home/ec2-user/redis-5.0.8
+  redis_config_001:
+    command: sed -i -e "s/daemonize no/daemonize yes/" redis.conf
+    cwd: /home/ec2-user/redis-5.0.8
+  redis_config_002:
+    command: sed -i -e "s/# maxmemory <bytes>/maxmemory 100MB/" redis.conf
+    cwd: /home/ec2-user/redis-5.0.8
+  redis_config_003:
+    command: sed -i -e "s/# maxmemory-policy volatile-lru/maxmemory-policy allkeys-lru/" redis.conf
+    cwd: /home/ec2-user/redis-5.0.8
+  redis_config_004:
+    command: sed -i -e "s/protected-mode yes/protected-mode no/" redis.conf
+    cwd: /home/ec2-user/redis-5.0.8
+  redis_server:
+    command: src/redis-server redis.conf
+    cwd: /home/ec2-user/redis-5.0.8
+  start-redis:
+    command: /home/ec2-user/start-redis.sh
+
+files:
+  "/home/ec2-user/start-redis.sh" :
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      #!/bin/bash
+      cd /home/ec2-user/redis-5.0.8/src/
+      killall -9 redis-server
+      ./redis-server --daemonize yes --protected-mode no
