chore: nginx config

--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -24,6 +24,10 @@ http {
         default     "upgrade";
     }
 
+    upstream django {
+        server unix:/run/daphne/devAppReporting.sock;
+    }
+
     server {
         listen        80 default_server;
         access_log    /var/log/nginx/access.log main;
@@ -40,7 +44,7 @@ http {
         
 
         location /ws {
-            proxy_pass          http://127.0.0.1:8001;
+            proxy_pass          http://django;
             proxy_http_version  1.1;
 
             proxy_set_header    Connection          $connection_upgrade;
