chore: nginx port

--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
     }
 
     upstream django {
-        server unix:/run/daphne/devAppReporting.sock;
+        server localhost:8001;
     }
 
     server {
