chore: ws port change

--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -24,10 +24,6 @@ http {
         default     "upgrade";
     }
 
-    upstream django {
-        server localhost:8001;
-    }
-
     server {
         listen        80 default_server;
         access_log    /var/log/nginx/access.log main;
@@ -44,7 +40,7 @@ http {
         
 
         location /ws {
-            proxy_pass          http://django;
+            proxy_pass          http://127.0.0.1:5000;
             proxy_http_version  1.1;
 
             proxy_set_header    Connection          $connection_upgrade;
