--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -49,6 +49,14 @@ http {
             proxy_set_header    X-Real-IP           $remote_addr;
             proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
             proxy_set_header    X-Forwarded-Proto   https;
+
+            proxy_read_timeout  86400;
+            proxy_send_timeout  86400;      
+
+            # 추가 설정
+            proxy_set_header    Sec-WebSocket-Protocol $http_sec_websocket_protocol;
+            proxy_set_header    Sec-WebSocket-Version  $http_sec_websocket_version;
+            proxy_set_header    Sec-WebSocket-Key      $http_sec_websocket_key;
         }
     }
 
