--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -38,9 +38,12 @@ http {
         # Include the Elastic Beanstalk generated locations
         include conf.d/elasticbeanstalk/*.conf;
         
+        upstream channels-backend{
+            server 0.0.0.0:8001;
+        }
 
         location /ws {
-            proxy_pass          http://127.0.0.1:5000;
+            proxy_pass          http://channels-backend;
             proxy_http_version  1.1;
 
             proxy_set_header    Connection          $connection_upgrade;
