--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -24,35 +24,44 @@ http {
         default     "upgrade";
     }
 
-    upstream channels-backend {
-            server 0.0.0.0:8000;
+    upstream channels-backend{
+            server 0.0.0.0:8001;
     }
 
-     # server_info/nginx/app
     server {
-        listen 80;
-        server_name *.elasticbeastalk.com;
+        listen        80 default_server;
+        access_log    /var/log/nginx/access.log main;
+
+        client_header_timeout 60;
+        client_body_timeout   60;
+        keepalive_timeout     60;
+        gzip                  off;
+        gzip_comp_level       4;
+        gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+        # Include the Elastic Beanstalk generated locations
+        include conf.d/elasticbeanstalk/*.conf;
         
-        location / {
-            proxy_pass http://127.0.0.1:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
+
         location /ws {
-            proxy_pass http://channels-backend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_pass          http://channels-backend;
+            proxy_http_version  1.1;
+
+            proxy_set_header    Connection          $connection_upgrade;
+            proxy_set_header    Upgrade             $http_upgrade;
+            proxy_set_header    Host                $host;
+            proxy_set_header    X-Real-IP           $remote_addr;
+            proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+            proxy_set_header    X-Forwarded-Proto   https;
+
+            proxy_read_timeout  86400;
+            proxy_send_timeout  86400;      
+
+            # 추가 설정
+            proxy_set_header    Sec-WebSocket-Protocol $http_sec_websocket_protocol;
+            proxy_set_header    Sec-WebSocket-Version  $http_sec_websocket_version;
+            proxy_set_header    Sec-WebSocket-Key      $http_sec_websocket_key;
         }
-        
     }
 
 }
