--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,18 @@ botocore==1.31.55 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2023.7.22 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.15.1 ; python_version >= "3.11" and python_version < "4.0"
 channels-redis==4.1.0 ; python_version >= "3.11" and python_version < "4.0"
-channels==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
-channels[daphne]==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
+channels==3.0.3 ; python_version >= "3.11" and python_version < "4.0"
+channels[daphne]==3.0.3 ; python_version >= "3.11" and python_version < "4.0"
 charset-normalizer==3.2.0 ; python_version >= "3.11" and python_version < "4.0"
 constantly==15.1.0 ; python_version >= "3.11" and python_version < "4.0"
 cryptography==41.0.4 ; python_version >= "3.11" and python_version < "4.0"
-daphne==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
+daphne==3.0.2 ; python_version >= "3.11" and python_version < "4.0"
 django-cors-headers==4.2.0 ; python_version >= "3.11" and python_version < "4.0"
 django-environ==0.11.2 ; python_version >= "3.11" and python_version < "4"
 django-storages==1.14 ; python_version >= "3.11" and python_version < "4.0"
 django==4.2.5 ; python_version >= "3.11" and python_version < "4.0"
 djangorestframework==3.14.0 ; python_version >= "3.11" and python_version < "4.0"
+gunicorn==20.0.4 ; python_version >= "3.11" and python_version < "4.0"
 hyperlink==21.0.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
 incremental==22.10.0 ; python_version >= "3.11" and python_version < "4.0"
